--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>welcome to programming hero</h1>
     <h3>I can push to github</h3>
     <p>This was my problem. Tried so many things and then realized it was main instead of master</p>
+    <input type="text">
 </body>
 </html>
